    ADDED: Synchronizer: ignore hidden files option
    ADDED: Synchronizer-results: drag [left], SHIFT+drag [right],
           Copy left/right selected items to clipboard
    ADDED: Locate-results: dragging items, copy to clipboard (CTRL+C)
    ADDED: Searcher-results: dragging items, copy to clipboard (CTRL+C)
    ADDED: Support for useraction placeholders in Krusader's commandline
           patches by Jiri Palacek and Vaclav Juza, thanks a lot!
    ADDED: New default user action "Backup current"
           http://www.kde-files.org/content/show.php?content=29801
    ADDED: ALT+C as default shortcut for compare directories
    ADDED: Brief view
    ADDED: GUI for configuring the atomic extensions in Konfigurator

  CHANGED: Useractions: much better handling of the Each-placeholder
           patch by Jiri Palacek, thanks!
  CHANGED: Icons in the 3rd hand (preview, quick and view)

    FIXED: krarc, problem with application/x-zip-compressed mime
    FIXED: [ 1665209 ] can't see the modified flag (*) if many tabs are used
    FIXED: [ 1678927 ] archive operation - copy to relative path fails
    FIXED: [ 1659215 ] does not Quit when using Mac Menu style
    FIXED: [ 1629447 ] can not view file in an archive with perm 600
    FIXED: KrServices::separateArgs bug, thanks to Jiri Palacek
    FIXED: Broken 3rd hand disk usage icon on systems with basic installation
    FIXED: [ 1649705 ] "Deleting non-empty directories" confirmation bug
    FIXED: keyboard problems in synchronizer, locate, searcher
    FIXED: [ 1601632 ] Esc don't work in KrViewer on SVG files
    FIXED: 'preserve attributes' sometimes fails setting the file mode
    FIXED: clicking on the 3rd hand widget's header, doesn't set focus
    FIXED: [ 1647279 ] out-of-bounds array access in the Filelight widget
    FIXED: Broken view panel icon in 3rd hand when Crystal icon theme is used
    FIXED: [ 1629450 ] Editing files in a separate window