@@ -185,10 +185,10 @@
       <used>false</used>
       <version>3</version>
       <includestyle>3</includestyle>
-      <root>/usr/qt/3</root>
+      <root>/usr/share/qt3</root>
       <designerintegration>EmbeddedKDevDesigner</designerintegration>
-      <qmake>/usr/qt/3/bin/qmake</qmake>
-      <designer>/usr/qt/3/bin/designer</designer>
+      <qmake>/usr/bin/qmake-qt3</qmake>
+      <designer></designer>
       <designerpluginpaths/>
     </qt>
   </kdevcppsupport>
