@@ -105,12 +105,16 @@ KgDependencies::KgDependencies( bool first, QWidget* parent,  const char* name )
 
   addApplication( "md5sum",         archGrid2, 0, checksum_tab, PAGE_CHECKSUM );
   addApplication( "sha1sum",        archGrid2, 1, checksum_tab, PAGE_CHECKSUM );
-  addApplication( "md5deep",        archGrid2, 2, checksum_tab, PAGE_CHECKSUM );
-  addApplication( "sha1deep",       archGrid2, 3, checksum_tab, PAGE_CHECKSUM );
-  addApplication( "sha256deep",     archGrid2, 4, checksum_tab, PAGE_CHECKSUM );
-  addApplication( "tigerdeep",      archGrid2, 5, checksum_tab, PAGE_CHECKSUM );
-  addApplication( "whirlpooldeep",  archGrid2, 6, checksum_tab, PAGE_CHECKSUM );
-  addApplication( "cfv",            archGrid2, 7, checksum_tab, PAGE_CHECKSUM );
+  addApplication( "sha224sum",      archGrid2, 2, checksum_tab, PAGE_CHECKSUM );
+  addApplication( "sha256sum",      archGrid2, 3, checksum_tab, PAGE_CHECKSUM );
+  addApplication( "sha384sum",      archGrid2, 4, checksum_tab, PAGE_CHECKSUM );
+  addApplication( "sha512sum",      archGrid2, 5, checksum_tab, PAGE_CHECKSUM );
+  addApplication( "md5deep",        archGrid2, 6, checksum_tab, PAGE_CHECKSUM );
+  addApplication( "sha1deep",       archGrid2, 7, checksum_tab, PAGE_CHECKSUM );
+  addApplication( "sha256deep",     archGrid2, 8, checksum_tab, PAGE_CHECKSUM );
+  addApplication( "tigerdeep",      archGrid2, 9, checksum_tab, PAGE_CHECKSUM );
+  addApplication( "whirlpooldeep",  archGrid2, 10, checksum_tab, PAGE_CHECKSUM );
+  addApplication( "cfv",            archGrid2, 11, checksum_tab, PAGE_CHECKSUM );
 
   kgDependenciesLayout->addWidget( tabWidget, 0, 0 );
 }
