@@ -1,3 +1,4 @@
+    ADDED: Vaclav's checksum patches (added sha* tools, fixed bugs etc...)
     ADDED: Synchronizer: ignore hidden files option
     ADDED: Synchronizer-results: drag [left], SHIFT+drag [right],
            Copy left/right selected items to clipboard
@@ -15,6 +16,7 @@
            patch by Jiri Palacek, thanks!
   CHANGED: Icons in the 3rd hand (preview, quick and view)
 
+    FIXED: Krusader wouldn't start after the "first time wizard" was launched
     FIXED: krarc, problem with application/x-zip-compressed mime
     FIXED: [ 1665209 ] can't see the modified flag (*) if many tabs are used
     FIXED: [ 1678927 ] archive operation - copy to relative path fails
